# HirePost---GCP

./: README.md
AutoVideoFactory/backend/: alembic.ini  pyproject.toml  requirements.txt  test_debug.py  test_full.py  test_ken_burns.py  test_ken_burns2.py  test_ken_burns3.py  test_ken_burns4.py  test_ken_burns5.py  test_ken_burns6.py  test_ollama.json  test_ollama.py  test_ollama2.py  test_pipeline.py
AutoVideoFactory/backend/alembic/: env.py
AutoVideoFactory/backend/app/: main.py
AutoVideoFactory/backend/app/agents/: __init__.py  analytics_agent.py  base.py  browser_agent.py  editing_agent.py  learning_agent.py  orchestrator.py  planner_agent.py  prompt_agent.py  publishing_agent.py  qa_agent.py  recovery_agent.py  research_agent.py  script_agent.py  subtitle_agent.py  supervisor_agent.py  trend_agent.py  video_agent.py  visual_agent.py  voice_agent.py
AutoVideoFactory/backend/app/api/: router.py
AutoVideoFactory/backend/app/api/routes/: admin.py  agents.py  auth.py  jobs.py  projects.py  system.py
AutoVideoFactory/backend/app/core/: config.py  database.py  events.py  exceptions.py  logging.py
AutoVideoFactory/backend/app/models/: __init__.py  agent.py  analytics.py  base.py  browser.py  content.py  job.py  project.py
AutoVideoFactory/backend/app/modules/: __init__.py  base.py
AutoVideoFactory/backend/app/modules/ocr/: __init__.py  (+1 more)
AutoVideoFactory/backend/app/schemas/: job.py  project.py
AutoVideoFactory/backend/app/services/: analytics_service.py  image_providers.py  learning_service.py  llm_client.py  pipeline_orchestrator.py  prompt_engineering.py  publishing_service.py  stock_providers.py  subtitle_service.py  video_editor.py  video_providers.py  voice_service.py  youtube_auth.py
AutoVideoFactory/backend/scripts/: authorize_youtube.py  download_bg_music.py  download_trending_music.py
AutoVideoFactory/backend/tests/: conftest.py
AutoVideoFactory/backend/tests/browser/: test_browser_automation.py
AutoVideoFactory/backend/tests/integration/: test_api.py
AutoVideoFactory/backend/tests/unit/: test_agents.py  test_core.py  test_models.py
(+68 files in other folders)
